--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.1.0
+  vibration:
+  shared_preferences: ^2.0.11
+  mqtt_client:
+  connectivity_plus: ^5.0.2
+  internet_connection_checker: ^1.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,6 +57,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  assets:
+    - assets/omgkawaii-blue-10-cm-kawaii-donut-squeeze-squishy-food-toys-40866696265941.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
